assets/pages/new-contributions-landing/contributionsLanding.scss
/* ... */
.countryGroups summary::-webkit-details-marker {
  display: none;
}

.countryGroups__list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.countryGroups__item > a {
  color: inherit;
  display: flex;
  padding: 0 40px;
  line-height: 40px;
  text-decoration: none;
}

.countryGroups__item > a:hover,
.countryGroups__item > a:focus {
  background: gu-colour(news-garnett-highlight);
  font-weight: bold;
}

/*= FOOTER */

footer[role="contentinfo"] {
  background: gu-colour(media-garnett-main-1);
  color: gu-colour(garnett-neutral-2);
  padding-bottom: $gu-v-spacing * 2;
  font-size: 12px;
}

footer[role="contentinfo"] a {
  color: gu-colour(garnett-neutral-5);
}

.component-footer__content {
  padding-top: $gu-v-spacing;
}

/*= CONTENT */
.gu-content__content {
  background: gu-colour(garnett-neutral-5);
  padding: 0 10px;
  overflow: hidden;
}

/*= TYPOGRAPHY */
body {
  color: gu-colour(media-garnett-main-1);
  font: normal 16px/1.5 $gu-text-egyptian-web;
}

h1 {
  border-bottom: 1px solid gu-colour(garnett-neutral-4);
  color: gu-colour(garnett-neutral-1);
  font: bold 32px/1.15 $gu-headline;
  margin: 0 -10px;
  padding: 0 10px $gu-v-spacing;
}
 
input,
select,
textarea,
button {
  font: inherit;
}
  
.blurb {
  font-size: 14px;
  line-height: 1.4;
  margin: ($gu-v-spacing / 4) 0 ($gu-v-spacing / 4 * 3);
}

footer[role="contentinfo"] {
  font-family: $gu-text-sans-web;
}

/*= BREAKPOINTS */

header[role="banner"] {
  height: 75px;
}

header[role="banner"],
footer[role="contentinfo"] {
  display: flex;
}

header[role="banner"] {
  align-items: flex-start;
  flex-direction: row-reverse;
  justify-content: space-between;
}

@include mq($from: mobile, $until: tablet) {
  h1 {
    border: 0;
    position: absolute;
    top: 0;
    left: 10px;
    width: 290px;
  }

  .glogo {
    top: 10px;
    right: 10px;
  }

  .gu-content__main {
    display: flex;
    flex-direction: column-reverse;
  }

  .gu-content__bg {
    height: 280px;
    position: relative;
  }

  .gu-content__bg .svg-contributions-bg-desktop {
    display: none;
  }
  
  .gu-content__bg .svg-contributions-bg-mobile {
    bottom: 0;
    height: 223px;
    left: 50%;
    position: absolute;
    transform: translate(-50%,0);
    width: 375px;
  }

  .countryGroups {
    margin-left: 10px;
    text-overflow: ellipsis;
    width: 185px;
    white-space: nowrap;
  }

  .countryGroups summary {
    padding-left: 10px;
  }

  .countryGroups .svg-globe {
    display: none;
  }

  .countryGroups__item > a {
    padding-left: 10px;
  }
}

@include mq($from: tablet) {
  header[role="banner"] {
    padding: 0 calc(50% - 350px);
    width: 700px;
  }

  footer[role="contentinfo"] {
    padding: 0 calc(50% - 350px) ($gu-v-spacing * 2);
    width: 700px;
  }

  .glogo {
    top: $gu-v-spacing * 2;
  }

  .countryGroups__item .icon {
    margin-left: -40px;
  }
    
  .gu-content__content {
    border-color: gu-colour(garnett-neutral-4);
    border-style: none solid;
    border-width: 0 1px;
    width: 380px;
    margin-left: calc(50% - 361px); /* account for the 11px of negative margin */
  }

  .gu-content__bg {
    bottom: 0;
    height: 580px;
    left: 0;
    position: absolute;
    width: 100%;
    z-index: -1;
  }
  
  .gu-content__bg svg {
    bottom: 0;
    height: 580px;
    left: 50%;
    position: absolute;
    transform: translate(-50%,0);
    width: 1400px;
  }

  .gu-content__main .svg-contributions-bg-mobile {
    display: none;
  }
}

@include mq($from: leftCol) {
  header[role="banner"] {
    padding: 0 calc(50% - 550px) 0 calc(50% - 390px);
    width: 940px;
  }
  
  footer[role="contentinfo"] {
    padding: 0 calc(50% - 550px) ($gu-v-spacing * 2) calc(50% - 390px);
    width: 940px;
  }

  .gu-content__content {
    width: 380px;
    margin-left: calc(50% - 401px); /* account for the 11px of negative margin */
  }
}

@include mq($from: wide) {
  header[role="banner"] {
    padding: 0 calc(50% - 620px);
    width: 1240px;
  }

  footer[role="contentinfo"] {
    padding: 0 calc(50% - 620px) ($gu-v-spacing * 2);
    width: 1240px;
  }
}
/* ... */

